# bananaDB

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cpp
src/bananadb/: CMakeLists.txt  store.cpp  store.h
src/server/: CMakeLists.txt  server.cpp  server.h
tests/: CMakeLists.txt  test.cpp
